modify post answers body params field, add a patch method
